Refactor URL to URI